--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pretty": "prettier --write './src/*.{html,css,js,json,md,jsx,mjs,cjs,ts,tsx}'"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
